fixed desktop overlapping

--- a/public/assets/css/aktivitaeten.styl
+++ b/public/assets/css/aktivitaeten.styl
@@ -14,7 +14,6 @@
 
 .generalActivities
   margin-bottom 2rem
-  display inline-table
 
 /*Iphone*/
 @media only screen  and (min-device-width: 375px)  and (max-device-width : 667px),
@@ -34,3 +33,6 @@
       padding 0 1rem
       line-height 4rem
       font-size 3rem
+
+  .generalActivities
+    display inline-table
